zstd: Bundled 1.4.5 crashes on armv6
Bundled zstd crashes when running armv6 userspace on armv8 hardware with a 64 bit Linux kernel. This is how armv6 is usually built nowadays. Upstream zstd includes a fix already: https://github.com/facebook/zstd/commit/28d0120b5ac62b56cd858bd46480c73730d044b4
Could you update bundled zstd (it should be in version 1.5.0), or backport the patch, please?
Edited by Brad King