zstd: Backport fix for SIGBUS on armv6 from zstd 1.5.0

Backport zstd commit `28d0120b` (Avoid SIGBUS on armv6, 2021-05-11,
`v1.5.0^2~11^2`) to our bundled copy of zstd 1.4.5.

Fixes: #22754